--- a/Client/src/sample/MainView.fxml
+++ b/Client/src/sample/MainView.fxml
@@ -7,97 +7,105 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<AnchorPane fx:id="mainFrame" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane id="AnchorPane" fx:id="mainFrame" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Pane fx:id="infoPane" layoutY="-1.0" prefHeight="38.0" prefWidth="657.0" style="-fx-background-color: lightsteelblue;">
+      <Pane id="windowPane" fx:id="infoPane" layoutY="-1.0" prefHeight="38.0" prefWidth="657.0" style="-fx-background-color: lightsteelblue;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="-1.0">
          <children>
-            <Label fx:id="userField" layoutX="43.0" layoutY="4.0" prefHeight="31.0" prefWidth="108.0" text="User: zehnp1" textFill="#2b5bae" />
-            <Label fx:id="locationField" layoutX="584.0" layoutY="4.0" prefHeight="31.0" prefWidth="59.0" text="StationA" textFill="#2b5bae" />
+            <Label id="lblUserName" fx:id="userField" layoutX="43.0" layoutY="4.0" prefHeight="31.0" prefWidth="159.0" text="User: zehnp1" textFill="#2b5bae" />
+            <Label id="lblLocationInfo" fx:id="locationField" layoutX="508.0" layoutY="4.0" prefHeight="31.0" prefWidth="135.0" text="StationA" textFill="#2b5bae" />
             <ImageView fitHeight="31.0" fitWidth="32.0" layoutX="6.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../media/Profilbild.png" />
                </image>
             </ImageView>
-            <Label fx:id="dateTimeField" layoutX="254.0" layoutY="4.0" prefHeight="31.0" prefWidth="150.0" text="27.10.2014; 15:01 Uhr" textFill="#2b5bae" />
+            <Label id="lblCurrentDate" fx:id="dateTimeField" layoutX="254.0" layoutY="4.0" prefHeight="31.0" prefWidth="191.0" text="27.10.2014; 15:01 Uhr" textFill="#2b5bae" />
          </children>
       </Pane>
-      <SplitPane dividerPositions="0.4419642857142857" layoutY="37.0" prefHeight="306.0" prefWidth="450.0">
+      <SplitPane dividerPositions="0.6850152905198776" layoutY="40.0" prefHeight="306.0" prefWidth="656.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
         <items>
-          <AnchorPane fx:id="mediInfoPane" minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="201.0" style="-fx-background-color: aliceblue;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="254.0">
                <children>
-                  <ImageView fx:id="mediPicture" fitHeight="120.0" fitWidth="173.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../media/mediBild.jpg" />
-                     </image>
-                  </ImageView>
+                  <SplitPane dividerPositions="0.4419642857142857" prefHeight="306.0" prefWidth="450.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <items>
+                      <AnchorPane fx:id="mediInfoPane" minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="201.0" style="-fx-background-color: aliceblue;">
+                           <children>
+                              <ImageView fx:id="mediPicture" fitHeight="120.0" fitWidth="173.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../media/mediBild.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="259.0">
+                           <children>
+                              <TextArea fx:id="txtareaMediInfo" editable="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                    </items>
+                  </SplitPane>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="259.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Label fx:id="mediName" layoutX="3.0" layoutY="-1.0" prefHeight="31.0" prefWidth="246.0" style="-fx-background-color: aliceblue;" text="Dafalgan 500mg, Tbl., 100Stk.">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Label>
-                  <Pane fx:id="medInfoField" layoutY="30.0" prefHeight="274.0" prefWidth="246.0" style="-fx-background-color: aliceblue;" />
+                  <SplitPane dividerPositions="0.8289473684210527" orientation="VERTICAL" prefHeight="304.0" prefWidth="201.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
+                    <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="248.0" prefWidth="162.0">
+                           <children>
+                              <TableView id="listData" fx:id="medList" layoutX="-1.0" prefHeight="248.0" prefWidth="201.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columns>
+                                  <TableColumn id="listScannedItems" prefWidth="56.0" text="Name" />
+                                  <TableColumn prefWidth="52.0" text="Menge" />
+                                    <TableColumn prefWidth="45.0" text="GLN" />
+                                    <TableColumn prefWidth="46.0" text="Lot" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="48.0" prefWidth="199.0" style="-fx-background-color: aliceblue;">
+                           <children>
+                              <Button id="btnCheckOut" fx:id="checkOutButton" layoutX="14.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkOut" text="check out" />
+                              <Button id="btnCheckIn" fx:id="CheckInButton" layoutX="113.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkIn" text="check in" />
+                           </children>
+                        </AnchorPane>
+                    </items>
+                  </SplitPane>
                </children>
             </AnchorPane>
         </items>
       </SplitPane>
-      <Separator fx:id="verticalSeperator" layoutX="447.0" layoutY="37.0" orientation="VERTICAL" prefHeight="306.0" prefWidth="8.0" style="-fx-background-color: gainsboro;" />
-      <Separator fx:id="horizontalSeparator1" layoutY="340.0" prefHeight="6.0" prefWidth="656.0" style="-fx-background-color: gainsboro;" />
-      <SplitPane dividerPositions="0.8289473684210527" layoutX="455.0" layoutY="36.0" orientation="VERTICAL" prefHeight="304.0" prefWidth="201.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="248.0" prefWidth="162.0">
-               <children>
-                  <TableView fx:id="medList" layoutX="-1.0" prefHeight="248.0" prefWidth="201.0">
-                    <columns>
-                      <TableColumn prefWidth="56.0" text="Name" />
-                      <TableColumn prefWidth="52.0" text="Menge" />
-                        <TableColumn prefWidth="45.0" text="GLN" />
-                        <TableColumn prefWidth="46.0" text="Lot" />
-                    </columns>
-                  </TableView>
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="48.0" prefWidth="199.0" style="-fx-background-color: aliceblue;">
-               <children>
-                  <Button fx:id="checkOutButton" layoutX="14.0" layoutY="11.0" mnemonicParsing="false" text="check out" />
-            
-                        
-                              <Button fx:id="CheckInButton" layoutX="113.0" layoutY="11.0" mnemonicParsing="false" text="check in" />
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-      <ImageView fx:id="produktionImage" fitHeight="90.0" fitWidth="108.0" layoutX="14.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../media/Produktion.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="transportImage" fitHeight="90.0" fitWidth="87.0" layoutX="121.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../media/Transport.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="grossistImage" fitHeight="90.0" fitWidth="81.0" layoutX="246.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../media/Grossist.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="transportImage" fitHeight="90.0" fitWidth="87.0" layoutX="364.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../media/Transport.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="stationImage" fitHeight="90.0" fitWidth="87.0" layoutX="483.0" layoutY="371.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../media/Station.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="bettImage" fitHeight="90.0" fitWidth="87.0" layoutX="581.0" layoutY="371.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../media/Bett.png" />
-         </image>
-      </ImageView>
+      <Pane layoutY="346.0" prefHeight="128.0" prefWidth="656.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <ImageView fx:id="produktionImage" fitHeight="90.0" fitWidth="108.0" layoutX="37.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../media/Produktion.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="transportImage" fitHeight="90.0" fitWidth="87.0" layoutX="144.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../media/Transport.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="grossistImage" fitHeight="90.0" fitWidth="81.0" layoutX="253.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../media/Grossist.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="transportImageOut" fitHeight="90.0" fitWidth="87.0" layoutX="360.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../media/Transport.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="stationImage" fitHeight="90.0" fitWidth="87.0" layoutX="481.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../media/Station.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="bettImage" fitHeight="90.0" fitWidth="87.0" layoutX="572.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../media/Bett.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
