adding items to list when scanning to improve - info on selcted item - scanned item selected

--- a/Client/src/sample/MainView.fxml
+++ b/Client/src/sample/MainView.fxml
@@ -53,10 +53,10 @@
                            <children>
                               <TableView id="listData" fx:id="medList" layoutX="-1.0" prefHeight="248.0" prefWidth="201.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columns>
-                                  <TableColumn id="listScannedItems" prefWidth="56.0" text="Name" />
-                                  <TableColumn prefWidth="52.0" text="Menge" />
-                                    <TableColumn prefWidth="45.0" text="GLN" />
-                                    <TableColumn prefWidth="46.0" text="Lot" />
+                                  <TableColumn id="listScannedItems" fx:id="tblColName" prefWidth="250.0" text="Name" />
+                                  <TableColumn fx:id="tblColMenge" prefWidth="100.0" text="Menge" />
+                                    <TableColumn fx:id="tableColGLN" prefWidth="150.0" text="GLN" />
+                                    <TableColumn fx:id="tablColHrst" prefWidth="200.0" text="Hrst." />
                                 </columns>
                               </TableView>
                            </children>
