--- a/Client/src/sample/MainView.fxml
+++ b/Client/src/sample/MainView.fxml
@@ -29,9 +29,9 @@
                     <items>
                       <AnchorPane fx:id="mediInfoPane" minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="201.0" style="-fx-background-color: aliceblue;">
                            <children>
-                              <ImageView fx:id="mediPicture" fitHeight="120.0" fitWidth="173.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="mediPicture" fitHeight="142.0" fitWidth="191.0" layoutX="7.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../media/mediBild.jpg" />
+                                    <Image url="@../media/mephadolor.png" />
                                  </image>
                               </ImageView>
                            </children>
