--- a/Client/src/ui/StockView.fxml
+++ b/Client/src/ui/StockView.fxml
@@ -7,18 +7,19 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<AnchorPane id="AnchorPane" fx:id="mainFrame" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane id="AnchorPane" fx:id="mainFrame" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.StockViewController">
    <children>
       <Pane id="windowPane" fx:id="infoPane" layoutY="-1.0" prefHeight="38.0" prefWidth="657.0" style="-fx-background-color: lightsteelblue;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="-1.0">
          <children>
             <Label id="lblUserName" fx:id="userField" layoutX="43.0" layoutY="4.0" prefHeight="31.0" prefWidth="159.0" text="User: zehnp1" textFill="#2b5bae" />
-            <Label id="lblLocationInfo" fx:id="locationField" layoutX="508.0" layoutY="4.0" prefHeight="31.0" prefWidth="135.0" text="StationA" textFill="#2b5bae" />
+            <Label id="lblLocationInfo" fx:id="locationField" layoutX="329.0" layoutY="4.0" prefHeight="31.0" prefWidth="135.0" text="StationA" textFill="#2b5bae" />
             <ImageView fitHeight="31.0" fitWidth="32.0" layoutX="6.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../media/Profilbild.png" />
                </image>
             </ImageView>
-            <Label id="lblCurrentDate" fx:id="dateTimeField" layoutX="254.0" layoutY="4.0" prefHeight="31.0" prefWidth="191.0" text="27.10.2014; 15:01 Uhr" textFill="#2b5bae" />
+            <Label id="lblCurrentDate" fx:id="dateTimeField" layoutX="130.0" layoutY="4.0" prefHeight="31.0" prefWidth="235.0" text="27.10.2014; 15:01 Uhr" textFill="#2b5bae" />
+            <Button layoutX="585.0" layoutY="6.0" mnemonicParsing="false" onAction="#processLogout" text="Logout" textAlignment="RIGHT" />
          </children>
       </Pane>
       <SplitPane dividerPositions="0.6850152905198776" layoutY="40.0" prefHeight="306.0" prefWidth="656.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
@@ -29,9 +30,9 @@
                     <items>
                       <AnchorPane fx:id="mediInfoPane" minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="201.0" style="-fx-background-color: aliceblue;">
                            <children>
-                              <ImageView fx:id="mediPicture" fitHeight="142.0" fitWidth="191.0" layoutX="7.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="mediPicture" fitHeight="120.0" fitWidth="173.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../media/mephadolor.png" />
+                                    <Image url="@../media/mediBild.jpg" />
                                  </image>
                               </ImageView>
                            </children>
