--- a/Client/src/ui/StockView.fxml
+++ b/Client/src/ui/StockView.fxml
@@ -31,7 +31,7 @@
                            <children>
                               <ImageView fx:id="mediPicture" fitHeight="120.0" fitWidth="173.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../media/mediBild.jpg" />
+                                    <Image url="@../media/mephadolor.png" />
                                  </image>
                               </ImageView>
                            </children>
