--- a/Client/src/ui/StockView.fxml
+++ b/Client/src/ui/StockView.fxml
@@ -65,14 +65,15 @@
                            <children>
                               <Button id="btnCheckOut" fx:id="checkOutButton" layoutX="7.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkOut" text="check out" AnchorPane.topAnchor="11.0" />
                               <Button id="btnCheckIn" fx:id="CheckInButton" layoutX="93.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkIn" text="check in" AnchorPane.topAnchor="11.0" />
-                              <AnchorPane layoutY="59.0" prefHeight="219.0" prefWidth="294.0">
+                              <AnchorPane layoutY="59.0" prefHeight="249.0" prefWidth="294.0">
                                  <children>
                                     <Label layoutX="24.0" text="Manuelle Erfassung" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="0.0" />
-                                    <Button defaultButton="true" layoutX="205.0" layoutY="168.0" mnemonicParsing="false" onAction="#addItem" prefHeight="26.0" prefWidth="75.0" text="OK" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="14.0" />
-                                    <TextField fx:id="txtExpiryDate" layoutX="14.0" layoutY="131.0" prefHeight="26.0" prefWidth="267.0" promptText="Ablaufdatum" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
-                                    <TextField fx:id="txtBatch" layoutX="14.0" layoutY="97.0" prefHeight="26.0" prefWidth="267.0" promptText="Batch / Lot" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
-                                    <TextField fx:id="txtSeriennummer" layoutX="14.0" layoutY="64.0" prefHeight="26.0" prefWidth="267.0" promptText="Seriennummer" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
-                                    <TextField fx:id="txtGTIN" layoutX="14.0" layoutY="30.0" prefHeight="26.0" prefWidth="267.0" promptText="GTIN" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
+                                    <Button defaultButton="true" layoutX="205.0" layoutY="198.0" mnemonicParsing="false" onAction="#addItem" prefHeight="26.0" prefWidth="75.0" text="OK" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="14.0" />
+                                    <TextField fx:id="txtExpiryDate" layoutX="14.0" layoutY="165.0" prefHeight="26.0" prefWidth="267.0" promptText="Ablaufdatum" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
+                                    <TextField fx:id="txtBatch" layoutX="14.0" layoutY="131.0" prefHeight="26.0" prefWidth="267.0" promptText="Batch / Lot" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
+                                    <TextField fx:id="txtSeriennummer" layoutX="14.0" layoutY="97.0" prefHeight="26.0" prefWidth="267.0" promptText="Seriennummer" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
+                                    <TextField fx:id="txtGTIN" layoutX="14.0" layoutY="63.0" prefHeight="26.0" prefWidth="267.0" promptText="GTIN" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
+                                    <TextField fx:id="txtInput" style="-fx-text-inner-color: white;" layoutX="14.0" layoutY="30.0" prefHeight="26.0" prefWidth="267.0" promptText="Input" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
                                  </children>
                               </AnchorPane>
                               <Button layoutX="248.0" layoutY="11.0" mnemonicParsing="false" onAction="#clearList" text="Clear" AnchorPane.topAnchor="11.0" />
